# kino-media-center

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: current-session-handoff.md  libmpv-binding-evaluation.md  libmpv-embedded-plan.md  libmpv-native-approach-b.md  libmpv-stage1-windows.md
electron/: db.ts  embeddedMpvExperimental.ts  ipc-channels.ts  main.ts  mpv.ts  mpvIpc.ts  preload.ts  tsconfig.json
native/embedded-mpv/src/: lib.rs
native/libmpv-poc/: .gitignore  README.md
native/libmpv-poc/render-loop-poc/: Cargo.toml
native/libmpv-poc/render-loop-poc/src/: main.rs
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src/components/: AddonCard.tsx  AddonManager.tsx  BackButton.tsx  CatalogItem.tsx  CatalogRow.tsx  ContinueWatchingRow.tsx  EmbeddedPlayerOverlay.tsx  EpisodeSelector.tsx  HomeHero.tsx  LibraryRecentRow.tsx  MediaTrailer.tsx  NavSearch.tsx  NowPlayingBar.tsx  Onboarding.tsx  PlayerIcons.tsx  ProfileAvatar.tsx  SearchBox.tsx  SourcesSection.tsx  StreamCard.tsx  SubtitlesSection.tsx  TopNav.tsx
src/pages/: AddonsPage.tsx  CollectionPage.tsx  DiscoverPage.tsx  ExpandedCatalogPage.tsx  ExperimentalEmbeddedPlayerPage.tsx  HomePage.tsx  LibraryPage.tsx  MediaPage.tsx  PlayerPage.tsx  ProfilePicker.tsx  SearchPage.tsx  SettingsPage.tsx
src/state/: ContextMenuContext.tsx  LibraryContext.tsx  ProfileContext.tsx  SettingsContext.tsx  ToastContext.tsx
src/theme/: ThemeProvider.tsx  themes.ts
src/types/: electron-api.d.ts  electron.d.ts  embedded-mpv.d.ts  preload.d.ts
(+46 files in other folders)
